feat(otp & verify): add otp for reset password and verify email after register

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,10 @@
 HOST = 'localhost'
 USER = 'root'
 PASSWORD = ''
-DATABASE = 'vameratale-tes'
+DATABASE = 'login-tes'
 PORT = 8000
 SALT_ROUND = 10
 JWT_SECRET = 'NavaKaraTeamGacorrMassive9MorningBMSIBILMBKMerdeka'
+USER_EMAIL = 'sherinanursyabania@gmail.com'
+APP_PASSWORD = 'ybhf pxos foqd qfdx'
+FRONTEND_URL = 'http://localhost:3000'
