fix(controller): fix query to fetch image

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 HOST = 'localhost'
 USER = 'root'
 PASSWORD = ''
-DATABASE = 'login-tes'
+DATABASE = 'vameratale'
 PORT = 8000
 SALT_ROUND = 10
 JWT_SECRET = 'NavaKaraTeamGacorrMassive9MorningBMSIBILMBKMerdeka'
