--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "embla-carousel-react": "^8.0.4",
     "lucide-react": "^0.378.0",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
