--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+  "author": "repiyann",
   "license": "MIT",
   "scripts": {
     "start": "node index.js"
